fix layout bug

--- a/style.css
+++ b/style.css
@@ -171,6 +171,6 @@ header{
     margin-right: 15px;
 }
 .last-one {
-    padding: 20px 0;
+    padding-bottom:0;
     border-bottom: 0;
 }
